# BlackJack-AI

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
artifacts/2026-07-21_23-31-13/: README.md  config.json
artifacts/2026-07-21_23-31-13/eval/: per_episode.csv  results.csv
artifacts/2026-07-21_23-31-13/train/: evaluations.npz  progress.csv
engine/: __init__.py  card.py  game.py  hand.py  player.py
eval/: main.py
tests/: test_engine.py
train/: env.py  features.py  main.py
tui/: __init__.py  format.py  main.py  styles.tcss
utils/: charts.py  config.py  report.py
